--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -2,8 +2,8 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # RUN apt-get update && apt-get install -y \
 #     gcc \
@@ -15,6 +15,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY backend/ .
 
-RUN python manage.py collectstatic --noinput --clear  # Добавляем --clear для очистки перед сборкой
-
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "photo_app.wsgi"]
+
+
