--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,69 @@
+deny 91.224.92.10;
+deny 45.125.66.139;
+limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+
 server {
     listen 80;
-    server_name localhost;
+    server_name alexandrafilina-photographer.ru;
+    server_tokens off;
+    # Дополнительная блокировка POST-запросов на HTTP
+    if ($request_method = POST) {
+        return 403 "POST not allowed on HTTP";
+    }
+
+    # Перенаправление на HTTPS
+    return 301 https://$host$request_uri;
+
+    # Блокировка device.rsp на уровне HTTP
+    location = /device.rsp {
+        return 403;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name alexandrafilina-photographer.ru;
+    server_tokens off;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    # Пути к SSL-сертификатам
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
     
+    # Настройки SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+    ssl_prefer_server_ciphers on;
+
+    # Блокировка POST-запросов к device.rsp на HTTPS
+    location = /device.rsp {
+        if ($request_method = POST) {
+            return 405;
+        }
+        return 403;
+    }
+    location ~ /\.(env|git|ht|save|dist|local|testing|live|uat) {
+        deny all;
+        return 404;
+    }
+    # Блокировка попыток обхода пути (../)
+    location ~ \.\. {
+        return 403;
+    }
+    if ($http_user_agent ~* (l9explore|l9tcpid)) {
+        return 403;
+    }
+    # Защита служебных файлов
+    location ~* (manifest.json|twint_ch.js) {
+        valid_referers none blocked alexandrafilina-photographer.ru;
+        if ($invalid_referer) {
+            return 403;
+        }
+        # Разрешаем доступ только из вашего домена
+        proxy_pass http://frontend:3000;
+    }
     # Frontend
     location / {
+        limit_req zone=one burst=5 nodelay;
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -11,22 +71,26 @@ server {
         client_max_body_size 30M;
     }
 
+    # API
     location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         client_max_body_size 30M;
     }
-
+    # Admin
     location /admin/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         client_max_body_size 30M;
     }
 
+    # Static files
     location /static/ {
         alias /app/static/;
         expires 365d;
@@ -34,6 +98,7 @@ server {
         add_header Cache-Control "public";
     }
 
+    # Media files
     location /media/ {
         alias /app/media/;
         expires 365d;
