--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./frontend/
+          dockerfile: Dockerfile.frontend
           push: true
           tags: lordgaben/pg_frontend:latest
   build_backend_and_push_to_docker_hub:
@@ -42,6 +43,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./backend/
+          dockerfile: Dockerfile.backend
           push: true
           tags: lordgaben/pg_backend:latest
   deploy:
@@ -71,13 +73,11 @@ jobs:
         script: |
           cd
           cd Photo_Gallery
-          sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_csv_v2
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
 
   send_message:
     runs-on: ubuntu-latest
