--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,12 @@
 deny 91.224.92.10;
 deny 45.125.66.139;
+
 limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+
+proxy_buffer_size 128k;
+proxy_buffers 4 256k;
+proxy_busy_buffers_size 256k;
+proxy_max_temp_file_size 2048m;
 
 server {
     listen 80;
